Add in link to CSS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>My blog</title>
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <h1>Kia ora Taiao! (Hello World!)</h1>
