--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>My blog</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="noindex" />
+    <title>My Dev Academy Blog</title>
     <link rel="stylesheet" href="styles/main.css" />
   </head>
+
   <body>
     <h1>Kia ora Taiao! (Hello World!)</h1>
+
     <p>This is the beginning of my website home page.</p>
+
     <p>It will eventually contain a list of links to all my blogs.</p>
   </body>
 </html>
