Restructure into border boxes

--- a/index.html
+++ b/index.html
@@ -1,18 +1,45 @@
+<!-- Note writing out HTML & CSS in full this time -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>My Dev Academy Blog</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex" />
-    <title>My Dev Academy Blog</title>
     <link rel="stylesheet" href="styles/main.css" />
+
+    <!-- <script src="name"></script> -->
+
+    <style></style>
   </head>
 
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1>
+    <div>
+      <header>
+        <h1>Kia ora Taiao! (Hello World!)</h1>
+      </header>
 
-    <p>This is the beginning of my website home page.</p>
+      <article>
+        <h2>My Dev Academy blog</h2>
+        <h3>This is heading 3</h3>
+        <p>This is the beginning of my website home page.</p>
+        <p>It will eventually contain a list of links to all my blogs.</p>
+        <p>This is another paragraph.</p>
+        <p>This is the last paragraph.</p>
+      </article>
+    </div>
 
-    <p>It will eventually contain a list of links to all my blogs.</p>
+    <footer>
+      <p>Footer links</p>
+
+      <div class="">
+        <a href="blog/about.html">About</a>
+
+        <a href="https://devacademy.co.nz/" target="_blank"
+          >This is a link to Dev Academy</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
