Update to index navigation bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex" />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" type="text/css" href="styles/main.css" />
 
     <!-- <script src="name"></script> -->
 
@@ -15,6 +15,17 @@
   </head>
 
   <body>
+    <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="../james-mcilraith.github.io/blog/about.html">About</a></li>
+      <li>
+        <a href="../james-mcilraith.github.io/blog/te-houtaewa-template.html"
+          >Te Houtaewa</a
+        >
+      </li>
+      <!--<li><a href="#contact">Contact</a></li>-->
+    </ul>
+
     <div>
       <header>
         <h1>Kia ora Taiao! (Hello World!)</h1>
@@ -32,14 +43,7 @@
 
     <footer>
       <p>Footer links</p>
-
-      <div class="">
-        <a href="blog/about.html">About</a>
-
-        <a href="https://devacademy.co.nz/" target="_blank"
-          >This is a link to Dev Academy</a
-        >
-      </div>
+      <a href="https://devacademy.co.nz/" target="_blank">Dev Academy</a>
     </footer>
   </body>
 </html>
