Add classes to CSS and update index

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <header>
         <h1>Kia ora Taiao! (Hello World!)</h1>
       </header>
+    </div>
 
+    <div>
       <article>
         <h2>My Dev Academy blog</h2>
         <h3>This is heading 3</h3>
@@ -38,12 +40,15 @@
         <p>It will eventually contain a list of links to all my blogs.</p>
         <p>This is another paragraph.</p>
         <p>This is the last paragraph.</p>
+        <p class="bold-quote">This is a bold quote</p>
       </article>
     </div>
 
-    <footer>
-      <p>Footer links</p>
-      <a href="https://devacademy.co.nz/" target="_blank">Dev Academy</a>
-    </footer>
+    <div>
+      <footer>
+        <p class="bold">Footer links</p>
+        <a href="https://devacademy.co.nz/" target="_blank">Dev Academy</a>
+      </footer>
+    </div>
   </body>
 </html>
