Update to meta names in head

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div>
       <article>
-        <h2>My Dev Academy blog</h2>
+        <h2>James's Dev Academy blog</h2>
         <h3>This is heading 3</h3>
         <p>This is the beginning of my website home page.</p>
         <p>It will eventually contain a list of links to all my blogs.</p>
