--- a/index.html
+++ b/index.html
@@ -16,10 +16,17 @@
 
   <body>
     <ul>
-      <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="../james-mcilraith.github.io/blog/about.html">About</a></li>
       <li>
-        <a href="../james-mcilraith.github.io/blog/te-houtaewa-template.html"
+        <a class="active" href="https://james-mcilraith.github.io/index.html"
+          >Home</a
+        >
+      </li>
+      <li>
+        <a href="https://james-mcilraith.github.io/blog/about.html">About</a>
+      </li>
+      <li>
+        <a
+          href="https://james-mcilraith.github.io/blog/te-houtaewa-template.html"
           >Te Houtaewa</a
         >
       </li>
