--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
   <body>
     <ul>
       <li>
-        <a class="active" href="https://james-mcilraith.github.io/index.html"
-          >Home</a
-        >
+        <a href="../james-mcilraith.github.io/index.html">Home</a>
       </li>
       <li>
-        <a href="https://james-mcilraith.github.io/blog/about.html">About</a>
+        <a href="../james-mcilraith.github.io/blog/about.html">About</a>
       </li>
       <li>
-        <a
-          href="https://james-mcilraith.github.io/blog/te-houtaewa-template.html"
+        <a href="../james-mcilraith.github.io/blog/te-houtaewa-template.html"
           >Te Houtaewa</a
         >
       </li>
