Update to navigation bar with new link to html-css file

--- a/index.html
+++ b/index.html
@@ -16,17 +16,10 @@
 
   <body>
     <ul>
-      <li>
-        <a href="../james-mcilraith.github.io/index.html">Home</a>
-      </li>
-      <li>
-        <a href="../james-mcilraith.github.io/blog/about.html">About</a>
-      </li>
-      <li>
-        <a href="../james-mcilraith.github.io/blog/te-houtaewa-template.html"
-          >Te Houtaewa</a
-        >
-      </li>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../blog/about.html">About</a></li>
+      <li><a href="../blog/html-css.html">Technical blog</a></li>
+      <li><a href="../blog/te-houtaewa-template.html">Te Houtaewa</a></li>
       <!--<li><a href="#contact">Contact</a></li>-->
     </ul>
 
