Navigation bar update

--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
 
   <body>
     <ul>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../blog/about.html">About</a></li>
-      <li><a href="../blog/html-css.html">Technical blog</a></li>
-      <li><a href="../blog/te-houtaewa-template.html">Te Houtaewa</a></li>
+      <li><a href="../james-mcilraith.github.io/index.html">Home</a></li>
+      <li><a href="../james-mcilraith.github.io/blog/about.html">About</a></li>
+      <li>
+        <a href="../james-mcilraith.github.io/blog/html-css.html"
+          >Technical blog</a
+        >
+      </li>
+      <li>
+        <a href="../james-mcilraith.github.io/blog/te-houtaewa-template.html"
+          >Te Houtaewa</a
+        >
+      </li>
       <!--<li><a href="#contact">Contact</a></li>-->
     </ul>
 
@@ -35,7 +43,6 @@
         <h3>This is heading 3</h3>
         <p>This is the beginning of my website home page.</p>
         <p>It will eventually contain a list of links to all my blogs.</p>
-        <p>This is another paragraph.</p>
         <p>This is the last paragraph.</p>
         <p class="bold-quote">This is a bold quote</p>
       </article>
