Add navigation bar class to html files and CSS file and text to About blog

--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
   </head>
 
   <body>
-    <ul>
-      <li><a href="../james-mcilraith.github.io/index.html">Home</a></li>
-      <li><a href="../james-mcilraith.github.io/blog/about.html">About</a></li>
-      <li>
-        <a href="../james-mcilraith.github.io/blog/html-css.html"
+    <ul class="navigation">
+      <li class="float">
+        <a class="dev" href="../james-mcilraith.github.io/index.html">Home</a>
+      </li>
+      <li class="float">
+        <a class="dev" href="../james-mcilraith.github.io/blog/about.html"
+          >About</a
+        >
+      </li>
+      <li class="float">
+        <a class="dev" href="../james-mcilraith.github.io/blog/html-css.html"
           >Technical blog</a
         >
       </li>
-      <li>
-        <a href="../james-mcilraith.github.io/blog/te-houtaewa-template.html"
+      <li class="float">
+        <a
+          class="dev"
+          href="../james-mcilraith.github.io/blog/te-houtaewa-template.html"
           >Te Houtaewa</a
         >
       </li>
@@ -39,19 +47,24 @@
 
     <div>
       <article>
-        <h2>James's Dev Academy blog</h2>
-        <h3>This is heading 3</h3>
-        <p>This is the beginning of my website home page.</p>
-        <p>It will eventually contain a list of links to all my blogs.</p>
-        <p>This is the last paragraph.</p>
-        <p class="bold-quote">This is a bold quote</p>
+        <h2>Read the About page</h2>
+        <h4>Thursday, 05 September 2024</h4>
+        <p>This is the beginning of my Dev Academy blog!</p>
+        <p>It will eventually contain a list of links to all my blog posts.</p>
+        <p>
+          To start, check out the
+          <a href="../james-mcilraith.github.io/blog/about.html">About page</a>
+          for some more details on the blog (and me).
+        </p>
       </article>
     </div>
 
     <div>
       <footer>
         <p class="bold">Footer links</p>
-        <a href="https://devacademy.co.nz/" target="_blank">Dev Academy</a>
+        <a class="dev" href="https://devacademy.co.nz/" target="_blank"
+          >Dev Academy</a
+        >
       </footer>
     </div>
   </body>
