--- a/index.html
+++ b/index.html
@@ -17,22 +17,26 @@
   <body>
     <ul class="navigation">
       <li class="float">
-        <a class="dev" href="../james-mcilraith.github.io/index.html">Home</a>
+        <a class="dev" href="https://james-mcilraith.github.io/index.html"
+          >Home</a
+        >
       </li>
       <li class="float">
-        <a class="dev" href="../james-mcilraith.github.io/blog/about.html"
+        <a class="dev" href="https://james-mcilraith.github.io/blog/about.html"
           >About</a
         >
       </li>
       <li class="float">
-        <a class="dev" href="../james-mcilraith.github.io/blog/html-css.html"
+        <a
+          class="dev"
+          href="https://james-mcilraith.github.io//blog/html-css.html"
           >Technical blog</a
         >
       </li>
       <li class="float">
         <a
           class="dev"
-          href="../james-mcilraith.github.io/blog/te-houtaewa-template.html"
+          href="https://james-mcilraith.github.io/blog/te-houtaewa-template.html"
           >Te Houtaewa</a
         >
       </li>
