--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <p>It will eventually contain a list of links to all my blog posts.</p>
         <p>
           To start, check out the
-          <a href="../james-mcilraith.github.io/blog/about.html">About page</a>
+          <a href="https://james-mcilraith.github.io/blog/about.html"
+            >About page</a
+          >
           for some more details on the blog (and me).
         </p>
       </article>
