--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li class="float">
         <a
           class="dev"
-          href="https://james-mcilraith.github.io//blog/html-css.html"
+          href="https://james-mcilraith.github.io/blog/html-css.html"
           >Technical blog</a
         >
       </li>
