Tidy up code to remove repeats

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- Note writing out HTML & CSS in full this time -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
-
-    <!-- <script src="name"></script> -->
-
-    <style></style>
+    <!--<style></style>-->
   </head>
 
   <body>
@@ -56,11 +51,10 @@
         <p>This is the beginning of my Dev Academy blog!</p>
         <p>It will eventually contain a list of links to all my blog posts.</p>
         <p>
-          To start, check out the
-          <a href="https://james-mcilraith.github.io/blog/about.html"
+          To start, check out the<a
+            href="https://james-mcilraith.github.io/blog/about.html"
             >About page</a
-          >
-          for some more details on the blog (and me).
+          >for some more details on the blog (and me).
         </p>
       </article>
     </div>
