Change spaces around About page link

--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
         <p>This is the beginning of my Dev Academy blog!</p>
         <p>It will eventually contain a list of links to all my blog posts.</p>
         <p>
-          To start, check out the<a
-            href="https://james-mcilraith.github.io/blog/about.html"
+          To start, check out the
+          <a href="https://james-mcilraith.github.io/blog/about.html"
             >About page</a
-          >for some more details on the blog (and me).
+          >
+          for some more details on the blog (and me).
         </p>
       </article>
     </div>
