Add in new blog post entry to Index html and shifted h4 date entries

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       </header>
     </div>
 
-    <div>
-      <article>
-        <h4>Thursday, 05 September 2024</h4>
+    <article>
+      <div>
         <h2>Read the About page</h2>
+        <h4>Thursday, 05 September 2024</h4>
         <p>This is the beginning of my Dev Academy blog!</p>
         <p>It will eventually contain a list of links to all my blog posts.</p>
         <p>
@@ -57,8 +57,16 @@
           >
           for some more details on the blog (and me).
         </p>
-      </article>
-    </div>
+      </div>
+      <div>
+        <h2>New Technical blog post</h2>
+        <h4>Friday, 06 September 2024</h4>
+        <p>
+          Just published - <a href=https://james-mcilraith.github.io/blog/html-css.html>Technical blog</a> on 'What is the difference between
+          Margin, Border, and Padding?'
+        </p>
+      </div>
+    </article>
 
     <div>
       <footer>
