Amendment to hidden CSS headings and rearrange About sections

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div>
       <header>
-        <h1>Kia ora Taiao! (Hello World!)</h1>
+        <h1>Kia ora!</h1>
       </header>
     </div>
 
