Add navigation bar link to Human blog

--- a/index.html
+++ b/index.html
@@ -24,11 +24,18 @@
       <li class="float">
         <a
           class="dev"
+          href="https://james-mcilraith.github.io/blog/identity-values.html"
+          >Human blog</a
+        >
+      </li>
+      <li class="float">
+        <a
+          class="dev"
           href="https://james-mcilraith.github.io/blog/html-css.html"
           >Technical blog</a
         >
       </li>
-      <li class="float">
+            <li class="float">
         <a
           class="dev"
           href="https://james-mcilraith.github.io/blog/te-houtaewa-template.html"
