--- a/index.html
+++ b/index.html
@@ -52,25 +52,24 @@
     </div>
 
     <article>
+<div>
+  <h2>Nau mai - Welcome!</h2>
+  <h4>Thursday, 05 September 2024</h4>
+  <p>Welcome to my Dev Academy course blog! This GitHub blog will store my human skills and technical blog posts for the course. Plus a few other posts on course matters. It will help demonstrtae how my software development knowledge and skills are coming along. Hopefully, you'll see improvements each time you visit over the coming few months.</p>
+
+</div>
+
       <div>
         <h2>Read the About page</h2>
         <h4>Thursday, 05 September 2024</h4>
-        <p>This is the beginning of my Dev Academy blog!</p>
-        <p>It will eventually contain a list of links to all my blog posts.</p>
-        <p>
-          To start, check out the
-          <a href="https://james-mcilraith.github.io/blog/about.html"
-            >About page</a
-          >
-          for some more details on the blog (and me).
+        <p>This is the beginning of my Dev Academy blog! To start, check out the <a href="https://james-mcilraith.github.io/blog/about.html">About page</a> for some more details on the blog (and me).
         </p>
       </div>
       <div>
-        <h2>New Technical blog post</h2>
-        <h4>Friday, 06 September 2024</h4>
+        <h2>Finding all my posts</h2>
+        <h4>Monday, 09 September 2024</h4>
         <p>
-          Just published - <a href=https://james-mcilraith.github.io/blog/html-css.html>Technical blog</a> on 'What is the difference between
-          Margin, Border, and Padding?'
+          I've helpfully updated my blog with two index pages for the <a href=https://james-mcilraith.github.io/blog/human-blog-index.html>Human blog</a> and for the <a href=https://james-mcilraith.github.io/blog/tech-blog-index.html>Technical blog.</a> Hopefully, it is now easier to navigate through them to all the posts. 
         </p>
       </div>
     </article>
