Change to incorrect links in index html

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
       <li class="float">
         <a
           class="dev"
-          href="https://james-mcilraith.github.io/blog/identity-values.html"
+          href="https://james-mcilraith.github.io/blog/human-blog-index.html"
           >Human blog</a
         >
       </li>
       <li class="float">
         <a
           class="dev"
-          href="https://james-mcilraith.github.io/blog/html-css.html"
+          href="https://james-mcilraith.github.io/blog/tech-blog-index.htm"
           >Technical blog</a
         >
       </li>
