Fix typo in navigation link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li class="float">
         <a
           class="dev"
-          href="https://james-mcilraith.github.io/blog/tech-blog-index.htm"
+          href="https://james-mcilraith.github.io/blog/tech-blog-index.html"
           >Technical blog</a
         >
       </li>
